[tool.poetry]
name = "swervepy"
version = "1.3.0"
description = "Swerve drive library for FRC"
authors = ["Ethan Wall <ethanhwall07@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/EWall25/swervepy"
keywords = ["frc", "swerve-drive"]

[tool.poetry.dependencies]
python = "~3.11"
robotpy = {version = ">=2024.0.0b4,<2024.1.0", extras = ["commands2", "phoenix5", "rev"]}
robotpy-pathplannerlib = ">=2024.0.0b6,<2024.1.0"
Pint = "^0.20.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
